# cgal4gp

./: Makefile  README.md  cgal4.gp  cgal4gp.cpp  cgal4gp.gp  simple.gp  tqf_width.gp
Basic_Viewer/: CMakeLists.txt  Qt.cpp  README.md  build+run  cgal.Basic_Viewer.4.gp  cgal.Basic_Viewer.4gp.cpp  demo.gp  really_clean
